Removed the lombok dependency