@@ -1,1 +1,2 @@
 --enable-preview
+--illegal-access=deny
